# src/routes/routes.ts
@@ -5,23 +5,21 @@ import UserCtrl from '../controllers/userctrl';
 
 const routes = Router();
 /* ROUTES USER */
-routes.post('/user/add', UserCtrl.add); /* OK */
-routes.post('/user/login', UserCtrl.login); /* OK */
-routes.get('/user/logout', UserCtrl.logout); /* OK */
-routes.get('/user/validate/:id', UserCtrl.validateAccount); /* OK */
-routes.get('/user/list', UserCtrl.list); /* OK */
+routes.post('/user/add', UserCtrl.add);
+routes.post('/user/login', UserCtrl.login);
+routes.get('/user/validate/:id', UserCtrl.validateAccount);
+routes.get('/user/list', UserCtrl.list);
 
 /* ROUTES CONTACTS */
 routes.post('/contact/add', ContactCtrl.add); /* OK */
+routes.post('/contact/search', ContactCtrl.search); /* OK */
+routes.post('/contact/list', ContactCtrl.list); /* OK */
 routes.put('/contact/update', ContactCtrl.update); /* OK */
-routes.delete('/contact/delete/:id', ContactCtrl.delete); /* OK */
-routes.get('/contact/search/:id', ContactCtrl.search); /* OK */
-routes.get('/contact/list/', ContactCtrl.list); /* OK */
+routes.delete('/contact/delete', ContactCtrl.delete); /* OK */
 
 /* ROUTES ADMINISTRATOR */
-routes.post('/administrator/login', AdministratorCtrl.login); /* OK */
-routes.post('/administrator/add', AdministratorCtrl.add); /* OK */
-routes.get('/administrator/logout', AdministratorCtrl.logout); /* OK */
+routes.post('/administrator/login', AdministratorCtrl.login);
+routes.post('/administrator/add', AdministratorCtrl.add);
 routes.put('/administrator/update', AdministratorCtrl.update);
 
 export default routes;
